app/static/stylesheets/style.css
/* my own html */
html {
	margin: 0;
	padding: 0;
	}
body { 
    font-family: 'Bodoni Moda', serif;
    margin-top: 30px; 
	padding: 30px;
	}
header {
        background-color: lightblue;
        color: white;
        position: fixed;
        top: 0;
        left: 0;
        right: 0;
        height: 60px;
        display: flex;
        align-items: center;
        box-shadow: 0 0 5px 0 black;
    }
header * {
        display: inline;
        font-size: 20px;
}
header li {
        margin: 20px;
}
header li a {
    color: black;
    text-decoration: none;
}

h1 {
    font-size: 80px;
    margin: 0px
}
h2 {
    font-style: italic;
    font-size: 20px;
}
body .centrictext{
    text-align: center;
    margin:40px
}
iframe{
    border: 0px;
}
div{
    text-align: center;
    position: relative;
    align-content: center;
}
.center {
    margin-left: auto;
    margin-right: auto;
  }
table, th, td {
    border: solid 1px;
    border-collapse: collapse;
  }

th, td {
    text-align: left;
    padding: 15px;
  }

